--- a/src/data/plans/machine-learning.us.yml
+++ b/src/data/plans/machine-learning.us.yml
@@ -68,7 +68,7 @@ part_time:
     recomended: false
     scholarship: "Financed"
     payment_time: "Pay in 3, 4 or 5 years"
-    price: "$299p/m"
+    price: "$200 - $299/mo"
     bullets: 
       - "Several partners offering loans and payment plans"
       - "Remaining balance could be paid over time $200 p/m"
@@ -95,6 +95,19 @@ part_time:
     icons: 
       - "/images/visa-mastercard.png"
 
+  - slug: 'edly-payment'
+    academies: ['atlanta-usa', 'austin-usa', 'chicago-usa', 'dallas-usa', 'downtown-miami', 'houston-usa', 'losangeles-usa', 'tampa-usa', 'toronto-canada', 'newyork-usa', 'orlando', 'online']
+    recomended: false
+    scholarship: "Income-Based Repayment Loan"
+    payment_time: "Flexible payments after graduation"
+    price: "IBR"
+    bullets:
+      - "Edly is proud to help 4Geeks Academy provide affordable, income-based repayment (IBR) loans to its students"
+      - "Only make payments once you land a job and earn the minimum income."
+      - "Flexible payments adjust based on your income"
+      - "Tuition paid directly to your school"
+    icons:
+      - "/images/edly.png"
 
 
 ## Spain & Europe
