--- a/src/data/location/montevideo-uruguay.us.yaml
+++ b/src/data/location/montevideo-uruguay.us.yaml
@@ -22,7 +22,7 @@ seo_title: "Coding Bootcamp in Montevideo, Uruguay with Job Guarantee"
 header:
   tagline: "4Geeks Academy in Uruguay"
   sub_header: "All programs are taught "
-  sub_header_highlighted: "Online, Hybrid or In-person."
+  sub_header_highlighted: "Online."
   paragraph: "Lifetime Coding Mentorship, Career Support and a tech driven developer community. \\n The number one coding bootcamp in Uruguay with over 1,000 graduates"
   image: "../../../static/images/locations/uruguay-header.png"
   alt: ""
