--- a/src/data/components/partner/partner.us.yaml
+++ b/src/data/components/partner/partner.us.yaml
@@ -4,13 +4,7 @@
 
 partners:
   tagline: "Who is hiring our students?"
-  sub_heading: |
-    Our network of partners is constantly growing. With the dedicated effort of GeekFORCE, our career support service, we proudly boast an employment rate of ~84% within 100 days of graduation.
-    
-    We keep hearing how our graduate’s skills amaze the companies that hired them. 
-    
-    "I'm continually impressed by the depth of knowledge possessed by 4Geeks students. In fact,
-    one of my hires from the program ended up becoming a team leader." - CodeNinjas.
+  sub_heading: 'Top companies hire 4Geeks graduates, with 84% landing jobs within 120 days thanks to their skills and our personalized career support. Our grads don’t just get hired—they launch successful careers and consistently earn recognition for their technical expertise and professionalism: "I’m continually impressed by the depth of knowledge possessed by 4Geeks students. One of my hires ended up becoming a team leader." - CodeNinjas.'
   footer_tagline: "438 COMPANIES"
   footer_button: "Review our latest hirings"
   footer_link: "/partners"
