UPDATE: replace 270 days with 9 months

--- a/src/data/components/faq/faq.us.yml
+++ b/src/data/components/faq/faq.us.yml
@@ -731,7 +731,7 @@ faq:
     questions:
       - question: "How does the 4Geeks Academy Job Guarantee work?"
         answer: |-
-          Our Job Guarantee ensures that if you meet all program requirements and still don’t get a qualifying tech job within 270 days of graduation, you are eligible for a full refund of your tuition. It’s our way of backing the real-world outcomes our bootcamp delivers.
+          Our Job Guarantee ensures that if you meet all program requirements and still don’t get a qualifying tech job within 9 months of graduation, you are eligible for a full refund of your tuition. It’s our way of backing the real-world outcomes our bootcamp delivers.
       - question: "Does the Job Guarantee refund the full tuition if I don’t get hired?"
         answer: |-
           Yes. If you qualify for the Job Guarantee and don’t receive a qualifying job offer within the job search window, you’ll receive a full tuition refund.
