--- a/src/data/course/datascience-ml.us.yaml
+++ b/src/data/course/datascience-ml.us.yaml
@@ -63,17 +63,25 @@ course_instructors:
 badges:
   paragraph: "Prepare to thrive in today's AI-powered tech industry with hyperpersonalized learning, unlimited 1:1 mentorship, and career support for life. Recognized by Course Report as one of the world's top <a href='/us/coding-bootcamp'>coding bootcamps</a>, chosen by Forbes as <a href='https://www.forbes.com/advisor/education/bootcamps/best-full-stack-developer-bootcamp/#4geeks_academy_full_stack_developer_bootcamp'>best bootcamp for students on a budget (2024)</a>, and rated 4.92/5 on SwitchUp. Licensed by the Florida Department of Education."
 
-# OVERLAPED
-overlaped:
-  heading: "Learn to create predictive models and master machine learning with 4Geeks Academy"
-  paragraph: "Dive into the world of machine learning with 4Geeks Academy's specialized program. Gain the skills to build predictive models for practical applications like fraud detection and natural language processing, using industry-leading tools such as Python, TensorFlow, and Scikit-learn."
-  button:
-    text: "LEARN MORE"
-    color: "blue" 
-    link: "/us/apply" 
+# TWO COLUMNS
+two_columns:
+  proportions: [6, 6]
   image:
-    src: "/images/landing/tres-personas-reloaded.webp"
-
+    style: '{"border" : "3px solid black", "backgroundSize": "cover", "backgroundPosition": "right" }'
+    src: "../../../static/images/testimonials/alissa-datascience.jpg"
+    shadow: true  
+  video: "https://www.youtube.com/watch?v=snI-n8Ruvxg"
+  heading:
+    text: "Learn to create predictive models and master machine learning with 4Geeks Academy"
+    font_size: ["30px", "30px", "30px", "30px", "30px"]
+  sub_heading:
+    text: "Dive deep into data science and machine learning with 4Geeks Academy’s specialized program. Gain hands-on experience building predictive models for real-world applications like fraud detection, natural language processing, and data-driven decision-making. Master industry-leading tools and libraries including Python, TensorFlow, and Scikit-learn to launch a high-paying data science career."
+    font_size: ["16px", "16px", "16px", "16px", "16px"]
+  button:
+    text: "Apply now"
+    color: "white"
+    background: "black"
+    path: "/us/apply"
 
 two_columns_info:
   proportions: [6, 6]
@@ -109,27 +117,6 @@ two_columns_info:
       text: "Progress with instant AI feedback, personalized guidance, and small class sizes."
     - heading: "JOIN A GLOBAL TECH COMMUNITY."
       text: "Receive unlimited advice, guidance, and training tailored to your unique profile and specific job offers."
-
-# TWO COLUMNS
-two_columns:
-  proportions: [6, 6]
-  image:
-    style: '{"border" : "3px solid black", "backgroundSize": "cover", "backgroundPosition": "right" }'
-    src: "../../../static/images/testimonials/alissa-datascience.jpg"
-    shadow: true  
-  video: "https://www.youtube.com/watch?v=snI-n8Ruvxg"
-  heading:
-    text: "Discover data science with Alissa, our campus manager in Miami"
-    font_size: ["30px", "30px", "30px", "30px", "30px"]
-  sub_heading:
-    text: "Hear our campus manager explain the fundamentals of data science and its applications! Discover the core concepts of 4Geeks Data Science & Machine Learning Bootcamp, including data analysis, predictive model building, and the use of tools such as Python, SQL, Looker, and Streamlit."
-    font_size: ["16px", "16px", "16px", "16px", "16px"]
-  button:
-    text: "Apply now"
-    color: "white"
-    background: "black"
-    path: "/us/apply"
-
 
 upcoming:
   no_dates_message: "There are currently no upcoming dates for this program"
