--- a/src/data/page/privacy-policy.es.yml
+++ b/src/data/page/privacy-policy.es.yml
@@ -147,7 +147,7 @@ sections:
       Las categorías tratadas son datos identificativos. No tratamos categorías de datos especialmente protegidos.
 
   - title: "¿Por cuánto tiempo conservaremos tus datos?"
-    text: "Los datos personales se conservarán hasta que solicites su supresión o hasta que dejen de ser necesarios para la finalidad recabada. En el caso de SMS, aplicamos retención limitada como se describe en la sección 'Tratamiento y Seguridad de Datos SMS'".
+    text: "Los datos personales se conservarán hasta que solicites su supresión o hasta que dejen de ser necesarios para la finalidad recabada. En el caso de SMS, aplicamos retención limitada como se describe en la sección 'Tratamiento y Seguridad de Datos SMS'"
 
   - title: "¿A qué destinatarios se comunicarán tus datos?"
     text: "
