--- a/src/data/location/santiago-chile.es.yaml
+++ b/src/data/location/santiago-chile.es.yaml
@@ -24,7 +24,7 @@ seo_title: "Coding Bootcamp en Santiago de Chile"
 header:
   tagline: "4Geeks Academy en Chile"
   sub_header: "Todos los programas son enseñados "
-  sub_header_highlighted: "Online"
+  sub_header_highlighted: "Online o Híbrida."
   paragraph: ""
   image: "../../../static/images/locations/santiago-home.png"
   alt: ""
