--- a/src/data/location/santiago-chile.us.yaml
+++ b/src/data/location/santiago-chile.us.yaml
@@ -27,7 +27,7 @@ seo_title: "Coding Bootcamp Santiago, Chile with Job Guarantee"
 header:
   tagline: "4Geeks Academy in Santiago de Chile"
   sub_header: "All programs are taught "
-  sub_header_highlighted: "Online"
+  sub_header_highlighted: "Online or Hybrid."
   paragraph: "Chile is positioned as one of the countries with the highest digital growth in the coming years, and particularly in Santiago the trend of bootcamps has been fostered in recent years, among them is 4GeeksAcademy. We have become a great study opportunity for many Chileans and foreigners who want to change their lives and learn about web development."
   image: "../../../static/images/locations/santiago-home.png"
   alt: ""
