Revert "UPDATE: LATAM to online only"
This reverts commit b6c260eec2ca5bea9b83dba38bf8ba4348bda01a.

--- a/src/data/location/online.us.yaml
+++ b/src/data/location/online.us.yaml
@@ -25,7 +25,7 @@ seo_title: "Online Coding Bootcamps with Job Guarantee"
 header:
   tagline: "Learn To Code Online"
   sub_header: "All programs are taught "
-  sub_header_highlighted: "Online."
+  sub_header_highlighted: "Online, Hybrid or In-person."
   paragraph: "Learning online is hard: Lucky for you, we offer: unlimited support, amazing content and lifetime career support. \\n Yes, it really is available for the rest of your life."
   image: "../../../static/images/locations/online-home.png"
   alt: ""
