--- a/src/data/page/privacy-policy.es.yml
+++ b/src/data/page/privacy-policy.es.yml
@@ -190,7 +190,7 @@ sections:
       "
 
   - title: "Aceptación y consentimiento"
-    text: '"
+    text: "
       Declaras haber sido informado de las condiciones sobre protección de datos personales, aceptando y consintiendo el tratamiento de los mismos por parte de 4Geeks Academy España S.L. en la forma y para las finalidades indicadas en esta política.
 
       Al proporcionar tu número de teléfono y marcar las casillas correspondientes (cuando proceda), consientes recibir comunicaciones SMS según lo descrito en la sección 'Comunicaciones SMS y Consentimiento (10DLC)'
