--- a/src/data/page/privacy-policy.us.yml
+++ b/src/data/page/privacy-policy.us.yml
@@ -1,42 +1,128 @@
 meta_info:
   slug: privacy-policy
   title: "Privacy Policy at 4Geeks Academy"
-  description: "Review 4Geeks Academy’s Privacy Policy to understand how we protect your data. Your privacy is important to us in our coding bootcamp programs."
+  description: "Review 4Geeks Academy’s Privacy Policy to understand how we protect your data, including how we use SMS in compliance with 10DLC."
   image: null
-  visibility: "visible" # visible (default), hidden (not indexed) or unlisted (listed but not in sitemap).
-  keywords: "Privacy Policy, 4Geeks Academy"
+  visibility: "visible"
+  keywords: "Privacy Policy, 4Geeks Academy, SMS, 10DLC, STOP to opt out"
   redirects: []
-## BANNER - HEADER
-# banner:
-#   tagline: Privacy Policy for 4Geeks Academy
-#   sub_heading: ""
-#   image: "/images/bg/pricing-bg.jpg"
 
 seo_title: "Privacy Policy"
 
 header:
   tagline: < Privacy Policy for 4Geeks Academy >
-  sub_heading: At 4Geeks Academy, accessible from https://4geeksAcademy.com , one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by 4Geeks Academy and how we use it.If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.
+  sub_heading: >
+    At 4Geeks Academy, accessible from https://4geeksacademy.com, one of our main
+    priorities is the privacy of our visitors and students. This Privacy Policy
+    explains what information we collect, how we use it—including SMS communications—
+    and the choices you have. If you have questions, contact us at privacy@4geeksacademy.com.
   image: ../../../static/images/bg/companies-bg.jpg
-  alt: ""
-# header:
-#   title: "Privacy Policy for 4Geeks Academy"
-#   text: "At 4Geeks Academy, accessible from https://4GeeksAcademy.com , one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by 4Geeks Academy and how we use it.If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us."
+  alt: "Students learning to code at 4Geeks Academy"
+
 sections:
   - title: "Log Files"
-    text: "4Geeks Academy follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information."
+    text: >
+      4Geeks Academy follows a standard procedure of using log files. These files log
+      visitors when they visit websites. All hosting companies do this as a part of
+      hosting services' analytics. The information collected by log files includes
+      internet protocol (IP) addresses, browser type, Internet Service Provider (ISP),
+      date and time stamp, referring/exit pages, and possibly the number of clicks.
+      These are not linked to any information that is personally identifiable. The
+      purpose of the information is for analyzing trends, administering the site,
+      tracking users' movement on the website, and gathering demographic information.
+
   - title: "Cookies and Web Beacons"
-    text: "Like any other website, 4Geeks Academy uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information."
+    text: >
+      Like many websites, 4Geeks Academy uses "cookies" to store information including
+      visitors' preferences and the pages on the website that the visitor accessed or
+      visited. The information is used to optimize the user experience by customizing
+      our web page content based on visitors' browser type and/or other information.
+
+  - title: "SMS Communications & Consent (10DLC)"
+    text: |-
+      **What we send & why.** If you provide your mobile number, we may send you
+      service-related or informational SMS messages (e.g., enrollment updates,
+      reminders, support notifications). Marketing messages are only sent if you
+      explicitly agree to receive them.
+
+      **How we collect consent.** Consent is obtained through our web forms, checkboxes,
+      enrollment or event registration flows, or when you text us first. Each form
+      clearly states that submitting your number authorizes us to send SMS messages.
+
+      **Opting out.** You can opt out at any time by replying **STOP** to any message.
+      You may receive one final message confirming your opt-out. For help, reply **HELP**
+      or email privacy@4geeksacademy.com.
+
+      **Message & data rates.** Standard message and data rates may apply, and message
+      frequency varies.
+
+      **Carrier disclaimer.** Carriers are not liable for delayed or undelivered messages.
+
+  - title: "SMS Data Handling & Security"
+    text: |-
+      We treat phone numbers and SMS interaction data as personal information:
+      - **No sale or sharing:** We do not sell or share your phone number with third
+        parties for their own marketing.
+      - **Limited access:** Only authorized personnel and service providers (e.g., SMS
+        delivery vendors) can access this data to perform services on our behalf.
+      - **Secure storage:** Data is stored using administrative, technical, and physical
+        safeguards designed to protect it.
+      - **Retention:** We keep SMS-related data only as long as needed to fulfill the
+        purpose for which it was collected or to comply with legal obligations, then
+        delete or anonymize it.
+
   - title: "Our Advertising Partners"
-    text: "Some of advertisers on our site may use cookies and web beacons. Our advertising partners are listed below. Each of our advertising partners has their own Privacy Policy for their policies on user data. For easier access, we hyperlinked to their Privacy Policies below."
+    text: >
+      Some advertisers on our site may use cookies and web beacons. Each of our
+      advertising partners has their own Privacy Policy for their policies on user data.
+      For easier access, we hyperlink to their Privacy Policies below.
+
   - title: "Privacy Policies"
-    text: "You may consult this list to find the Privacy Policy for each of the advertising partners of 4Geeks Academy. Our Privacy Policy was created with the help of the Privacy Policy Generator Online. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on 4Geeks Academy, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.Note that 4Geeks Academy has no access to or control over these cookies that are used by third-party advertisers."
+    text: >
+      You may consult this list to find the Privacy Policy for each of the advertising
+      partners of 4Geeks Academy. Third-party ad servers or ad networks use technologies
+      like cookies, JavaScript, or Web Beacons that are used in their respective
+      advertisements and links that appear on 4Geeks Academy, which are sent directly to
+      users' browser. They automatically receive your IP address when this occurs.
+      These technologies are used to measure the effectiveness of their advertising
+      campaigns and/or to personalize the advertising content that you see on websites
+      that you visit. Note that 4Geeks Academy has no access to or control over these
+      cookies that are used by third-party advertisers.
+
   - title: "Third Party Privacy Policies"
-    text: "4Geeks Academy's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You may find a complete list of these Privacy Policies and their links here: Privacy Policy Links. You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites. What Are Cookies?"
+    text: >
+      4Geeks Academy's Privacy Policy does not apply to other advertisers, messaging
+      providers, or websites. Thus, we advise you to consult the respective Privacy
+      Policies of these third-party services for more detailed information, including
+      how to opt out. You can disable cookies through your individual browser options;
+      instructions can be found at your browser’s website.
+
   - title: "Children's Information"
-    text: "Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity. 4Geeks Academy does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records."
+    text: >
+      Another part of our priority is adding protection for children while using the
+      internet. We encourage parents and guardians to observe, participate in, and/or
+      monitor and guide their online activity. 4Geeks Academy does not knowingly collect
+      any Personal Identifiable Information from children under the age of 13. If you
+      believe your child provided such information on our website, contact us immediately
+      and we will promptly remove it from our records.
+
   - title: "Online Privacy Policy Only"
-    text: "This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in 4Geeks Academy. This policy is not applicable to any information collected offline or via channels other than this website."
+    text: >
+      This Privacy Policy applies only to our online activities and is valid for visitors
+      to our website with regards to the information that they shared and/or collect on
+      4Geeks Academy. This policy is not applicable to any information collected offline
+      or via channels other than this website.
+
   - title: "Consent"
-    text: "By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions."
-date_release: ""
+    text: >
+      By using our website, you consent to this Privacy Policy. By providing your phone
+      number and affirmatively opting in where required, you consent to receive SMS
+      communications as described above and agree to our Terms and Conditions.
+
+  - title: "Changes to This Policy"
+    text: >
+      We may update this Privacy Policy from time to time. We will post the revised
+      version with an updated effective date. Your continued use of the site after any
+      changes signifies your acceptance of the revised policy.
+
+date_release: "2025-07-23"
