UPDATE: LATAM locations ar Online or Hybrid

--- a/src/data/location/panamacity-panama.us.yaml
+++ b/src/data/location/panamacity-panama.us.yaml
@@ -22,7 +22,7 @@ seo_title: "Coding Bootcamp in Panama, Panama City with Job Guarantee"
 header:
   tagline: "4Geeks Academy in Panama"
   sub_header: "All programs are taught "
-  sub_header_highlighted: "Online, Hybrid or In-person."
+  sub_header_highlighted: "Online or Hybrid."
   paragraph: "Lifetime Coding Mentorship, Career Support and a tech driven developer community. \\n The number one coding bootcamp in Panama with over 1,000 graduates"
   image: "../../../static/images/locations/panama-header.png"
   alt: ""
