--- a/src/data/location/costa-rica.us.yaml
+++ b/src/data/location/costa-rica.us.yaml
@@ -22,7 +22,7 @@ seo_title: "Coding Bootcamp in Costa Rica with Job Guarantee"
 header:
   tagline: "4Geeks Academy in Costa Rica"
   sub_header: "All programs are taught "
-  sub_header_highlighted: "Online, Hybrid or In-person."
+  sub_header_highlighted: "Online or Hybrid."
   paragraph: "Lifetime Coding Mentorship, Career Support and a tech driven developer community. \\n The number one coding bootcamp in Costa Rica with over 1,000 graduates"
   image: "../../../static/images/locations/costarica-home.png"
   alt: "4Geeks Academy online coding bootcamp in Costa Rica"
