--- a/src/data/location/lapaz-bolivia.us.yaml
+++ b/src/data/location/lapaz-bolivia.us.yaml
@@ -22,7 +22,7 @@ seo_title: "Coding Bootcamp in La Paz, Bolivia with Job Guarantee"
 header:
   tagline: "4Geeks Academy in Bolivia"
   sub_header: "All programs are taught "
-  sub_header_highlighted: "Online, Hybrid or In-person."
+  sub_header_highlighted: "Online or Hybrid."
   paragraph: "Lifetime Coding Mentorship, Career Support and a tech driven developer community. \\n The number one coding bootcamp in Bolivia with over 1,000 graduates"
   image: "../../../static/images/locations/bolivia-header.png"
   alt: ""
