--- a/src/data/location/lima-peru.us.yaml
+++ b/src/data/location/lima-peru.us.yaml
@@ -22,7 +22,7 @@ seo_title: "Coding Bootcamp in Lima, Peru with Job Guarantee"
 header:
   tagline: "Learn to code in Lima, Peru"
   sub_header: "All programs are taught "
-  sub_header_highlighted: "Online, Hybrid or In-person."
+  sub_header_highlighted: "Online or Hybrid."
   paragraph: "Lifetime Coding Mentorship, Career Support and a tech driven developer community. \\n The number one coding bootcamp in Lima, Peru with over 1,000 graduates"
   image: "../../../static/images/locations/peru-header.png"
   alt: ""
