--- a/src/data/location/quito-ecuador.us.yaml
+++ b/src/data/location/quito-ecuador.us.yaml
@@ -22,7 +22,7 @@ seo_title: "Coding Bootcamp in Quito, Ecuador with Job Guarantee"
 header:
   tagline: "4Geeks Academy in Ecuador"
   sub_header: "All programs are taught "
-  sub_header_highlighted: "Online, Hybrid or In-person."
+  sub_header_highlighted: "Online or Hybrid."
   paragraph: "Lifetime Coding Mentorship, Career Support and a tech driven developer community. \\n The number one coding bootcamp in Ecuador with over 1,000 graduates"
   image: "../../../static/images/locations/ecuador-header.png"
   alt: ""
