UPDATE: succes cases es

--- a/src/data/components/scholarship_success_cases/scholarship_success_cases.es.yml
+++ b/src/data/components/scholarship_success_cases/scholarship_success_cases.es.yml
@@ -1,6 +1,7 @@
-title: Casos de éxito
-contributor: Colaborador
 
+title: Las Carreras Reales Comienzan Aquí — Pregunta a Nuestros Estudiantes
+subtitle: "Nuestros graduados son muy demandados, con más del 84% contratados dentro de los seis meses de finalizar el programa. Las reseñas de estudiantes y los resultados profesionales lo demuestran: te irás con habilidades técnicas, confianza y una estrategia profesional para ingresar a uno de los campos más gratificantes de la tecnología y seguir creciendo."
+contributor: Contributor
 cases:
   - name: Loretta Thompson
     img: "../../../../static/images/students/ttaLoretta.jpeg"
