--- a/src/data/course/datascience-ml.es.yaml
+++ b/src/data/course/datascience-ml.es.yaml
@@ -1,7 +1,7 @@
 meta_info:
   slug: curso-datascience-machine-learning   #<----URL: https://4geeksacademy.com/es/coding-bootcamps/curso-datascience-machine-learning
   title: "Conviértete en un Ingeniero de IA y Machine Learning en 4Geeks Academy"
-  description: "El bootcamp de Data Science y Machine Learning de 4Geeks Academy ofrece garantía de empleo. Desarrolla habilidades demandadas y desbloquea emocionantes oportunidades de carrera."
+  description: "El bootcamp de Data Science y ML de 4Geeks Academy ofrece garantía de empleo. Desarrolla habilidades demandadas y desbloquea oportunidades profesionales"
   bc_slug: "datascience-ml"
   template: "course-datascience"
   image: "/images/og-preview/datascience-ml.es.png"
