--- a/src/data/course/full-stack-ft.us.yaml
+++ b/src/data/course/full-stack-ft.us.yaml
@@ -85,9 +85,10 @@ two_columns_rigo:
       - heading: ""
         text: |
           • <strong style="text-decoration: none; color: #000000; font-weight: 700;">Rigobot</strong>, our custom-built <strong style="text-decoration: none; color: #000000; font-weight: 700;">AI coding assistant</strong>, follows your progress and gives tailored feedback exactly when and how  you need it.
-          <br />
+          <br>
+          <br>
           • Get unmatched personal attention with our <strong style="text-decoration: none; color: #000000; font-weight: 700;">7:1 student teacher ratio</strong>, plus <strong style="text-decoration: none; color: #000000; font-weight: 700;">unlimited access to 1:1 sessions</strong> with our expert mentors and career coaches.
-          <br />
+          <br>
 # OVERLAPED
 overlaped:
   heading: "Why learning Vibe Coding is essential"
@@ -137,6 +138,60 @@ two_column_geek:
     background: "black"
     hover_color: "white"
     path: "/us/apply"
+
+# How It Works
+how_it_works:
+  background: "#0084FF"
+  heading:
+    text: "Do our Bootcamps Deliver Results You Can Count On?"
+    font_size: ["30px", "30px", "30px", "30px", "30px"]
+    style: '{ "color": "white" }'
+  sub_heading:
+    text: "Yes — and we've got the numbers to back it up."
+    font_size: ["20px", "20px", "16px", "16px", "16px"]
+    style: '{ "textAlign": "center", "width": "60%", "color": "white"}'      
+  icons:
+    - icon: "graduation-2"
+      color: "#0084FF"
+      title: "Job Placement Rate"
+      content: "84% of graduates were hired"
+    - icon: "briefcase-2"
+      color: "#FF0000"
+      title: "Avergage time to get hired"
+      content: "140 days after graduation"
+    - icon: "stairswflag"
+      color: "#BE8BFF"
+      title: "Salary Increase"
+      content: "55% increase after graduation"
+
+# Why 4Geeks Job Guarantee
+why_4geeks_job_guarantee:
+  proportions: [6, 6]
+  image:
+    style: '{ "backgroundSize": "contain" }'
+    src: "/images/landing/blonde-girl-laptop.png"
+  heading:
+    style: '{ "margin-top": "0px" }'
+    text: "Why we offer the added security of a Job Guarantee"
+    font_size: ["40px", "34px", "34px", "25px", "25px"]
+  sub_heading:
+    font_size: ["16px", "16px", "16px", "14px", "14px"]
+    style: '{ "font-weight": "100" }'
+    text: "Our goal is more than teaching skills — we're here to launch successful tech careers. With a cutting edge curriculum that's aligned with the latest AI developments, hands-on teaching methodology and personalized career support, our program has a proven track record of preparing students for the tech job market"
+  content:
+    text: "Join a global leader in AI tech education. With 7+ campuses and 4,000+ alumni, we offer AI-powered learning and lifelong career support."
+  bullets:
+    items:
+      - text: "Our program's effectiveness is backed by strong hiring and retention rates"
+      - text: "We know how tech is evolving and prepare you to thrive in the new job market"
+      - text: "We believe in our teaching approach and your commitment to succeed"
+  button:
+    style: '{ "padding": "10px", "border-radius": "3px" }'
+    text: "Apply Now"
+    color: "white"
+    hover_color: "white"
+    background: "black"
+    path: "#leadform_bottom"
 
 
 ## TWO COLUMNS
